# wordsearch-project

./: .gitignore  README.md  test_phrase
alg2prototype/: alg2.py  bereshit-36.txt  hebrew-freq-10000.txt  nztest.txt  results.db  testdict.txt  torah.txt
ansible/: install-backend.yaml  install-frontend.yaml  install-sandbox.sh  install.yaml  nginx  vm_inventory.yaml  wordsearch_api.service
app/: build_and_push.sh  docker-compose.yaml  main.py
app/api/: Dockerfile  api.py  main.py  pyproject.toml  requirements.txt  wordsearch_api.service
app/api/logic/: ToDo  find_word_indices.py  get_sentences.py  run_algorithm.py
app/api/logic/classes/: lexicon.py  secret_text.py
app/api/logic/fiddling/: open_timer.py  tests.py
app/api/output/found-word-indices/: bereshit36-testdict-4.txt  nztest-dictionary-4.txt  nztest-testdict-4.txt
app/api/output/sentences/: bereshit36-testdict-4.txt  nztest-dictionary-4.txt  nztest-testdict-4.txt
app/api/uploaded-lexicons/: testdict.txt
app/api/uploaded-texts/: nztest.txt  war_and_peace.docx
k8s/: backend-deployment.yaml  cheeseburger-deployment.yaml  diagnostics.yaml  frontend-deployment.yaml  namespace.yaml
progress-reports/: .~lock.project_working_hours.ods#  2023-03.ods  2023-04-Jon.xlsx  2023-04.ods  feb-hours-eyal.txt  februar_hours.ods  januar_hours.ods  march-hours  november_hours.ods  november_hours.xlsx  october_hours.ods  september_hours.ods  work-planning-eyal-dror.txt  סיכום עבודה ספטמבר.odt
sample-lexicons/: .~lock.רשימת המילים בשפה העברית ושכיחות על פי ויקיפדיה.xlsx#  (+1 more)
sample-texts/: ana_krnina.docx  (+3 more)
(+60 files in other folders)
