[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Max Rogol <98maxon98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-docx = "^0.8.11"
flask = "^2.3.2"
cors = "^1.0.1"
flask-cors = "^4.0.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
